--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:edge:auto": "PDF_TEST_BROWSER=edge node ./scripts/test-auto-takeover-playwright.mjs",
     "test:edge:arxiv": "PDF_TEST_BROWSER=edge node ./scripts/test-arxiv-playwright.mjs",
     "test:edge:list": "PDF_TEST_BROWSER=edge node ./scripts/test-edge-arxiv-list-click-playwright.mjs",
-    "test:edge:outline": "node ./scripts/test-edge-outline-behavior-playwright.mjs"
+    "test:edge:outline": "node ./scripts/test-edge-outline-behavior-playwright.mjs",
+    "test:edge:theme": "node ./scripts/test-edge-theme-playwright.mjs"
   },
   "keywords": [
     "chrome-extension",
